cosmetic(pie-notification): DSW-3642 fix style changes on small screen

--- a/packages/components/pie-notification/src/notification.scss
+++ b/packages/components/pie-notification/src/notification.scss
@@ -20,8 +20,6 @@
     --notification-close-icon-offset: var(--dt-spacing-b);
     --notification-icon-fill: var(--dt-color-content-inverse);
     --notification-icon-background-color: var(--dt-color-container-inverse);
-    --notification-icon-padding: var(--dt-spacing-a);
-    --notification-close-button-size: 40px;
     --icon-size-override: 24px;
 
     padding: var(--dt-spacing-d);
@@ -78,25 +76,6 @@
 
     }
 
-    &.c-notification--small {
-        --notification-heading-font-family: var(--dt-font-heading-xs-family);
-        --notification-heading-font-size: #{p.font-size(--dt-font-heading-xs-size--narrow)};
-        --notification-heading-line-height: #{p.line-height(--dt-font-heading-xs-line-height--narrow)};
-        --notification-heading-font-weight: var(--dt-font-heading-xs-weight);
-        --notification-font-family: var(--dt-font-body-s-family);
-        --notification-font-size: #{p.font-size(--dt-font-body-s-size)};
-        --notification-line-height: #{p.line-height(--dt-font-body-s-line-height)};
-        --notification-font-weight: var(--dt-font-body-s-weight);
-        --notification-close-icon-offset: var(--dt-spacing-a-small);
-        --notification-close-button-size: 32px;
-        --notification-icon-padding: var(--dt-spacing-a-small);
-        --icon-size-override: 20px;
-
-        padding: var(--dt-spacing-b);
-        gap: var(--dt-spacing-b);
-        max-width: 360px;
-    }
-
 
     &-heading {
         margin: 0;
@@ -112,28 +91,6 @@
         }
     }
 
-    &.c-notification--small &-heading {
-        @include media('>md') {
-            --notification-heading-font-size: #{p.font-size(--dt-font-heading-xs-size--narrow)};
-            --notification-heading-line-height: #{p.line-height(--dt-font-heading-xs-line-height--narrow)};
-        }
-    }
-
-    &.c-notification--small.is-compact &-content-section {
-        flex: 1;
-        min-width: 0;
-    }
-
-    &.c-notification--small &-footer {
-        align-items: center;
-    }
-
-    &.c-notification--small &-footer.is-compact {
-        align-self: stretch;
-        align-items: center;
-        padding-inline-start: var(--dt-spacing-b);
-    }
-
     &-content-section {
         display: flex;
         flex-direction: row;
@@ -141,7 +98,7 @@
         gap: var(--dt-spacing-c);
 
         &.is-dismissible {
-            max-width: calc(100% - var(--notification-close-icon-offset) - var(--notification-close-button-size));
+            max-width: calc(100% - var(--notification-close-icon-offset) - 40px); // 40px is the size of the medium icon button
         }
     }
 
@@ -174,6 +131,71 @@
             }
         }
     }
+
+    &.c-notification--small {
+        @include media('<md') {
+            --notification-heading-font-family: var(--dt-font-heading-xs-family);
+            --notification-heading-font-size: #{p.font-size(--dt-font-heading-xs-size--narrow)};
+            --notification-heading-line-height: #{p.line-height(--dt-font-heading-xs-line-height--narrow)};
+            --notification-heading-font-weight: var(--dt-font-heading-xs-weight);
+            --notification-font-family: var(--dt-font-body-s-family);
+            --notification-font-size: #{p.font-size(--dt-font-body-s-size)};
+            --notification-line-height: #{p.line-height(--dt-font-body-s-line-height)};
+            --notification-font-weight: var(--dt-font-body-s-weight);
+            --notification-close-icon-offset: var(--dt-spacing-a);
+            --icon-size-override: 20px;
+
+            padding: 0;
+            gap: 0;
+        }
+    }
+
+    &.c-notification--small.is-compact {
+        @include media('<md') {
+            gap: var(--dt-spacing-b);
+        }
+    }
+
+    &.c-notification--small &-content-section {
+        @include media('<md') {
+            padding: var(--dt-spacing-b) var(--dt-spacing-b) 0;
+        }
+    }
+
+    &.c-notification--small &-content-section:last-child {
+        @include media('<md') {
+            padding-block-end: var(--dt-spacing-b);
+        }
+    }
+
+    &.c-notification--small &-content-section.is-dismissible {
+        @include media('<md') {
+            max-width: calc(100% - var(--dt-spacing-a) - 32px);
+        }
+    }
+
+    &.c-notification--small.is-compact &-content-section {
+        @include media('<md') {
+            flex: 1;
+            min-width: 0;
+            padding: var(--dt-spacing-b) 0 var(--dt-spacing-b) var(--dt-spacing-b);
+        }
+    }
+
+    &.c-notification--small &-footer {
+        @include media('<md') {
+            padding: var(--dt-spacing-b);
+            align-items: flex-end;
+        }
+    }
+
+    &.c-notification--small &-footer.is-compact {
+        @include media('<md') {
+            align-self: stretch;
+            align-items: center;
+            padding: var(--dt-spacing-b);
+        }
+    }
 }
 
 .icon,
@@ -183,5 +205,12 @@
     background-color: var(--notification-icon-background-color);
     color: var(--notification-icon-fill);
     border-radius: var(--dt-radius-rounded-b);
-    padding: var(--notification-icon-padding);
+    padding: var(--dt-spacing-a);
+}
+
+.c-notification--small .icon,
+.c-notification--small ::slotted([slot="icon"]) {
+    @include media('<md') {
+        padding: var(--dt-spacing-a-small);
+    }
 }
